# static-test

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile  config.json  provision.sh  statictest.cppcheck  toolchain.cmake  vagrant.sh
include/nbsdx/: ThreadPool.h
lib/: Thread.cpp  Thread.h
src/: Application.cpp  Application.h  Configuration.cpp  Configuration.h  Dispatcher.cpp  Dispatcher.h  Listener.h  LogService.cpp  LogService.h  Sensor.cpp  Sensor.h  SensorsManager.cpp  SensorsManager.h  data_types.h  events.h  exceptions.h  main.cpp
src/listeners/: DbListener.cpp  DbListener.h  StdoutPrinter.cpp  StdoutPrinter.h
src/sensors/: AnalogSensor.cpp  AnalogSensor.h
test/: DispatcherTest.cpp  SimpleTest.cpp  StubListener.h  TestRunner.cpp
